[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/devnull/Checkpoint.gd" type="Script" id=1]
[ext_resource path="res://assets/sfx/CheckpointSaved.wav" type="AudioStream" id=2]

[sub_resource type="CylinderMesh" id=4]
top_radius = 2.0
bottom_radius = 2.0
height = 0.2

[sub_resource type="CylinderShape" id=5]
height = 0.125
radius = 2.0

[sub_resource type="CylinderShape" id=6]
radius = 2.0

[sub_resource type="CylinderMesh" id=7]
top_radius = 0.2
bottom_radius = 2.0

[sub_resource type="SpatialMaterial" id=8]
flags_transparent = true
albedo_color = Color( 0.12549, 1, 0, 0.231373 )

[node name="Checkpoint" type="Spatial"]
script = ExtResource( 1 )

[node name="Floor" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Floor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.025, 0 )
mesh = SubResource( 4 )
skeleton = NodePath("../..")

[node name="CollisionShape" type="CollisionShape" parent="Floor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.013, 0 )
shape = SubResource( 5 )

[node name="SaveTrigger" type="Area" parent="."]
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="SaveTrigger"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1, 0 )
shape = SubResource( 6 )

[node name="Indicator" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 1.1, 0 )
visible = false
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="SpawnPosition" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0 )

[node name="SaveSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
stream = ExtResource( 2 )

[connection signal="body_entered" from="SaveTrigger" to="." method="_on_SaveTrigger_body_entered"]
